<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/income"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/holo_green_color_theme" 
                android:singleLine="true"/>

            <TextView
                android:id="@+id/textViewIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/holo_green_color_theme" 
                android:singleLine="true"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/expenses"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/holo_red_color_theme" 
                android:singleLine="true"/>

            <TextView
                android:id="@+id/textViewExpenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/holo_red_color_theme" 
                android:singleLine="true"/>
        </TableRow>
        <!--
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="?android:attr/dividerHorizontal" />
        -->

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:text="@string/difference"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" 
                android:singleLine="true"/>

            <TextView
                android:id="@+id/textViewDifference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" 
                android:singleLine="true"/>
        </TableRow>
    </TableLayout>

</merge>